--- a/interview_behavioral/templates/interview_behavioral/setup.html
+++ b/interview_behavioral/templates/interview_behavioral/setup.html
@@ -1,3 +1,4 @@
+{# Updated Behavioral Interview Setup Template with new styling #}
 {% extends 'users/base.html' %}
 
 {% block header_title %}Behavioral Interview Setup{% endblock %}
@@ -12,6 +13,11 @@
 
 {% block content %}
 <div class="setup-container">
+    <div class="setup-header">
+        <h1>Behavioral Interview Setup</h1>
+        <p class="setup-description">Prepare for your behavioral interview by providing some background information.</p>
+    </div>
+    
     <div class="setup-card">
         <form action="{% url 'interview_behavioral:index' %}" method="POST" class="setup-form">
             {% csrf_token %}
@@ -38,7 +44,7 @@
             </div>
 
             <div class="setup-actions">
-                <button type="submit" class="btn btn-primary">Start Interview</button>
+                <button type="submit" class="btn-primary">Start Interview</button>
             </div>
         </form>
     </div>
