--- a/interview_behavioral/templates/interview_behavioral/setup.html
+++ b/interview_behavioral/templates/interview_behavioral/setup.html
@@ -1,8 +1,8 @@
 {# Updated Behavioral Interview Setup Template with new styling #}
 {% extends 'users/base.html' %}
 
-{% block header_title %}Behavioral Interview Setup{% endblock %}
-{% block header_description %}Prepare for your behavioral interview by providing some background information.{% endblock %}
+{% block header_title %}Behavioral Interview{% endblock %}
+
 
 {% block extra_css %}
 <div id="extra_css_block">
