--- a/interview_technical/templates/interview_technical/setup.html
+++ b/interview_technical/templates/interview_technical/setup.html
@@ -1,7 +1,6 @@
 {% extends 'users/base.html' %}
 
-{% block header_title %}Technical Interview Setup{% endblock %}
-{% block header_description %}Configure your technical interview settings below to get started.{% endblock %}
+{% block header_title %}Technical Interview{% endblock %}
 
 {% block extra_css %}
 <div id="extra_css_block">
